test/asm/rs-overwrite.err
error: Built-in symbol `_RS` cannot be purged
    at rs-overwrite.asm(1)
error: `_RS` already defined as built-in
    at rs-overwrite.asm(4)
error: `_RS` already defined as built-in
    at rs-overwrite.asm(10)
error: `_RS` already defined as built-in non-`EQU`
    at rs-overwrite.asm(16)
error: `_RS` already defined as built-in non-`EQUS`
    at rs-overwrite.asm(19)
Assembly aborted with 5 errors!
